2002-09-19  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el: Renamed all "non-user" functions and variables from
	nethack-* to nh-*.  Renamed all nethack-api-* functions and
	variables to nhapi-*.  Renamed all references of "glyphs" to
	"tiles" (except for the filename nethack-glyphs.el).

	* nethack-keys.el: Likewise.

	* nethack-glyphs.el: Likewise.

	* nethack-example.el: Likewise.
	
	* nethack-cmd.el: Likewise.

	* nethack-api.el: Likewise.
	
	* nethack-api.el (overlay): Added require for XEmacs.

2002-09-16  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* Makefile (test-patch): Add rule.
	(dist): Depend on a tested patch.

	* mkpatch: Add win/tty/termcap.c to list of files to include in
	patch.  Create patch from clean tarball.

	* nethack-example.el (nethack-timestamp-message): Put loose code
	from this file into this function.
	(nh-gdb): New function.

2002-09-15  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys.el (nethack-map-mode-map, nethack-menu-mode-map):
	Add supress-keymap.  From Istvan Marko <mi@imarko.dhs.org>.

2002-09-12  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el: Removed the remains of the window.doc comments.
	They were misleadingly out of date.
	(nethack-api-end): Add function.

	* mkpatch: Don't include win/lisp/TODO file in patch.

	* nethack-api.el (nethack-api-menu-putstr): Rename from
	`nethack-api-putstr'.
	
2002-09-12  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* Makefile (dist): Build the distribution tarball in the current
	directory.
	(DISTFILES): Update patch filename.

	* nethack-api.el (nethack-reset-status-variables): Rename from
	`nethack-reset-status'.
	(nethack-api-curs): Don't take a winid argument.  Always operate
	on `nethack-map-buffer'.
	(nethack-api-message): Split out from nethack-api-putstr.  Always
	operates on `nethack-message-buffer'.
	(nethack-api-print-glyph): Always operate on `nethack-map-buffer'.
	(nethack-inventory-need-update): Add variable.
	(nethack-api-update-inventory): Set
	`nethack-inventory-need-update' to t.