@@ -1,8 +1,16 @@
+2002-09-20  Ryan Yeske  <rcyeske@vcn.bc.ca>
+
+	* nethack-api.el: Move all customizable variables and face
+	definitions to nethack.el.
+
+	* nethack.el: Reorder functions and variables.  Cosmetic change.
+	Update comments.
+	
 2002-09-19  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
-	* nethack.el: Renamed all "non-user" functions and variables from
-	nethack-* to nh-*.  Renamed all nethack-api-* functions and
-	variables to nhapi-*.  Renamed all references of "glyphs" to
+	* nethack.el: Rename all "non-user" functions and variables from
+	nethack-* to nh-*.  Rename all nethack-api-* functions and
+	variables to nhapi-*.  Rename all references of "glyphs" to
 	"tiles" (except for the filename nethack-glyphs.el).
 
 	* nethack-keys.el: Likewise.
@@ -15,7 +23,7 @@
 
 	* nethack-api.el: Likewise.
 	
-	* nethack-api.el (overlay): Added require for XEmacs.
+	* nethack-api.el (overlay): Add require for XEmacs.
 
 2002-09-16  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
